--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
     <section id="about" class="contact" >
       <div class="contact-form p-2 bg-primary">
         <h2 class="text-center">Contact Form</h2>
-        <form >
+        <form name="contact" method="POST" data-netlify="true">
           <div class="form-group">
             <label for="name">Name</label>
             <input type="text" name="name" id="name" placeholder="Enter Name">
