Footer improvement.Some minor bug fixes.

--- a/index.html
+++ b/index.html
@@ -139,6 +139,7 @@
 
     <div id="fotter" class="bg-dark py-1 text-center">
       <div>
+        <p>Developed with <i class="fa-solid fa-heart i-color"></i> BY <a href="https://www.facebook.com/profile.php?id=100007116709242" target="_blank">Muhammad Bilal</a></p>
         <p>Copyright &copy; 2022 DEV AI, All Rights Reserved</p>
       </div>
     </div>
